# docs

./: .buildinfo  azure.txt  dummy.txt  genindex.html  index.html  index2.rst  objects.inv  pyproject.toml  rollup.html  salt.txt  search.html  searchindex.js  test.py  tmp.txt
.doctrees/: index.doctree  rollup.doctree
.github/workflows/: publish.yml  repos.yml
_sources/: index.rst.txt  rollup.rst.txt
source/: conf.py  extensions.rst  index.rst  meeting-notes.rst  meetingnotes.rst  rollup.rst
source/working_group/2024/: 2024-02-15-meeting-notes.md
